fix: temporarily fix rendering of kbd tag + heti-spacing

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -44,3 +44,6 @@ h6:before {
 .md-typeset h3 {
     font-weight: 500;
 }
+.md-typeset kbd {
+  padding: 0 0.5em;
+}
